testsuite/poke.pkl/union-diag-4.pk
/* { dg-do compile } */

/* Declarations are only allowed in unions if they appear before any
   of the alternatives. */

fun pred = int: { return 0; }

type Foo = union
 {
   int bar : pred;
   var foo = 10; /* { dg-error "" } */
 };
